<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/network"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="188dp"
            android:layout_height="152dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/intra" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/neon_teal"
            android:padding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="10dp"/>

        <!-- Sign Up Redirect -->
        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>
