<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/network"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="188dp"
            android:layout_height="152dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/intra" />

        <!-- Name Field -->
        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/email_add"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp" />

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/glass_bg"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/neon_teal"
            android:padding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="12dp" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="10dp"/>

        <!-- Login Redirect -->
        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>